--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".UploadPost"></activity>
         <activity android:name=".LaunchingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,9 +23,7 @@
         <activity android:name=".SignUp" />
         <activity android:name=".LoginPage" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".Homepage">
-
-        </activity>
+        <activity android:name=".Homepage"></activity>
     </application>
 
 </manifest>
